--- a/Bryllup/Pages/Account/ForgotPassword.cshtml
+++ b/Bryllup/Pages/Account/ForgotPassword.cshtml
@@ -8,7 +8,7 @@
 <h4>Enter your email.</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-lg-offset-4 col-md-4">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -16,7 +16,9 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <div class="form-group">
+                <button type="submit" class="btn btn-default">Submit</button>
+                </div>
         </form>
     </div>
 </div>
