--- a/Bryllup/Pages/Info.cshtml
+++ b/Bryllup/Pages/Info.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @{
-    ViewData["Title"] = "Informasjon om bryllipet";
+    ViewData["Title"] = "Informasjon om bryllupet";
 }
 <div class="row">
     <div class="col-lg-offset-4 col-md-4">
@@ -13,25 +13,29 @@
 <div class="row">
     <div class="col-lg-offset-4 col-md-4">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-            sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-lg-offset-4 col-md-4">
-        <h2>Ytterligere informasjon</h2>
-    </div>
-</div>
-<div class="row">
-    <div class="col-lg-offset-4 col-md-4">
+            Her vil vi legge ut mer informasjon når bryllupet nærmer seg. Alt er tross alt ikke helt i boks ennå, selv om vi har mye på blokka.
+            Det som er i boks, er at vi skal gifte oss. Og vi vet hvor og når.
+        </p>     
+        <p>Vielsen skal holdes i Fagerborg kirke kl 13. Men vi tenker det er lurt å være der i litt god tid før.</p>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-            sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Vi ordner med transport til Ekebergrestauranten etter vielsen.
         </p>
+        <p>
+            På Ekebergrestauranten kan vi være til kl. 0300. Siden vi tross alt er i byen, ordner folk selv med transport hjem eller videre derfra.
+        </p>
+        <p>
+            Selv om det står: Antrekk ‘Smoking / Mørk dress’, er det lov til å ta seg friheter til å kle seg i andre fine ting.
+        </p>
+        <p>
+            Toastmaster for kvelden er Mattis Herman Nyquist. Han kan nåes på tlf:
+            <br />415 56 696
+            <br /><a href="mailto:mattisherman@gmail.com">mattisherman@gmail.com</a>
+        </p>
+        <p>
+            Vi ønsker et moderat antall taler til middagen, men er mer enn åpne for underholdningsbidrag etterpå. Det blir både mikrofon og orkester tilgjengelig.
+        </p>
+        <p>Om noen har allergier, husk å skrive dette i kommentarfeltet under registreringen. </p>
+        <p>Om dere lurer på noe annet, allerede - ring oss! </p>
+        <p>Mer informasjon kommer. </p>
     </div>
 </div>
