--- a/Bryllup/Pages/StartRegistration.cshtml
+++ b/Bryllup/Pages/StartRegistration.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @{
-    ViewData["Title"] = "Start registering";
+    ViewData["Title"] = "Passord, takk";
 }
 <h2>@ViewData["Title"]</h2>
 
@@ -13,8 +13,7 @@
     <div class="row">
         <div class="col-lg-offset-4 col-md-4">
             <form method="post">
-                <h4>Skriv inn passordet fra invitasjonen</h4>
-                <hr />
+                <h4>Vennligst skriv inn passordet fra invitasjonen</h4>
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Input.Passord"></label>
@@ -25,7 +24,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <button type="submit" value="true" class="btn btn-default">Gå videre</button>
+                            <button type="submit" value="true" class="btn btn-default">Gå!</button>
                             </div>
                         </div>
                     </div>
