--- a/Bryllup/Pages/Index.cshtml
+++ b/Bryllup/Pages/Index.cshtml
@@ -30,7 +30,7 @@
             }
             <div>&nbsp;</div>
             <div>
-                <a class="btn btn-primary active center-block" style="margin-bottom:4px; word-wrap:break-word;" href="/Attendees">Registere om dere kommer eller ikke</a>
+                <a class="btn btn-primary active center-block" style="margin-bottom:4px; word-wrap:break-word;" href="/Attendees">Endre/se på registrering</a>
                 <a class="btn btn-primary active center-block" style="margin-bottom:4px; word-wrap:break-word;" href="/Info">Se informasjon om bryllypet</a>
             </div>
         </div>
