--- a/Bryllup/Pages/Info.cshtml
+++ b/Bryllup/Pages/Info.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @{
-    ViewData["Title"] = "Informasjon om bryllupet";
+    ViewData["Title"] = " Velkommen tilbake!";
 }
 <div class="row">
     <div class="col-lg-offset-4 col-md-4">
@@ -12,16 +12,56 @@
 </div>
 <div class="row">
     <div class="col-lg-offset-4 col-md-4">
+
         <p>
-            Her vil vi legge ut mer informasjon når bryllupet nærmer seg. Alt er tross alt ikke helt i boks ennå, selv om vi har mye på blokka.
-            Det som er i boks, er at vi skal gifte oss. Og vi vet hvor og når.
-        </p>     
-        <p>Vielsen skal holdes i Fagerborg kirke kl 13. Men vi tenker det er lurt å være der i litt god tid før.</p>
+            Bryllupet nærmer seg og vi gleder oss stort! Det nye, store på denne siden er at man nå har fått flere begivenheter å velge i! Se bare her:
+        </p>
         <p>
+            &nbsp;
+        </p>
+        <h2>
+
+            Fredagsvors på EIGHT Rooftop Bar
+
+        </h2>
+        <p>
+            Vi ønsker å holde et lite «vorspiel» før den store dagen, og håper at alle (ihvertfall så mange som mulig) vil komme på takterasse-baren EIGHT (tidl. Etoile) på Grand Hotell, dagen før dagen (altså fredag 6. juli, for å snakke i klartekst). Vi vil være der fra kl. 19, og kan friste med lett snacks og en og annen forfriskning til de som vil komme. Dette er dagen for å varme opp sine sosiale ferdigheter, og mingle med familie, venner og fjerne slektninger. M.a.o. ingenting man bør gå glipp av!
+        </p>
+        <p>
+            Vi kjører, som dere skjønner, en heldigital løsning her, og ønsker at dere vil huke av om dere kommer eller ikke. Vi gjør det ikke sånn bare for å fremstå som moderne,
+            men fordi utestedet trenger å vite hvordan de skal dimensjonere opplegget. Blir vi mange nok, får vi muligens styre musikkanlegget!
+            Vi anmoder alle om å svare så fort dere har gjort dere opp en mening, men setter ingen strammere frist enn «rimelighetens grenser».
+            Gå til registreringssiden for å huke av <strong><a href="/Attendees">HER</a></strong>.
+        </p>
+        <p>
+            &nbsp;
+        </p>
+        <h2>
+            Søndagsbrunsj på Bølgen & Moi Briskeby
+        </h2>
+        <p>
+            Dagen derpå håper vi at mange (evt. alle) vil komme på Bølgen & Moi på Briskeby kl 14. Dette er jo stedet som er kjent for å ha byens beste søndagsbrunsj.
+            Når man i tillegg kan oppsummere gårsdagen med de beste folkene fra da, bør dette være en no-brainer.
+            Her kan man dele vennskapelig sladder, diskutere kjoler eller bare sitte stille og spise. Barn er dessuten veldig velkomne,
+            og det blir en egen avdeling for de. Det blir et godt tilbud på en pris. pr. snute. Dette kommer vi tilbake til straks.
+        </p>
+
+        <p>
+            Gå til registreringssiden for å huke av <strong><a href="/Attendees">HER</a></strong>.
+        </p>
+        <p>
+            &nbsp;
+        </p>
+        <h2>
+            Informasjon om bryllupet
+
+        </h2>
+        <p>
+            Vielsen skal holdes i Fagerborg kirke kl 13. Men vi tenker det er lurt å være der i litt god tid før.
             Vi ordner med transport til Ekebergrestauranten etter vielsen.
         </p>
         <p>
-            På Ekebergrestauranten kan vi være til kl. 0300. Siden vi tross alt er i byen, ordner folk selv med transport hjem eller videre derfra.
+            På Ekebergrestauranten kan vi være til kl. 0300. Folk ordner selv med transport hjem eller videre derfra.
         </p>
         <p>
             Selv om det står: Antrekk ‘Smoking / Mørk dress’, er det lov til å ta seg friheter til å kle seg i andre fine ting.
@@ -36,6 +76,5 @@
         </p>
         <p>Om noen har allergier, husk å skrive dette i kommentarfeltet under registreringen. </p>
         <p>Om dere lurer på noe annet, allerede - ring oss! </p>
-        <p>Mer informasjon kommer. </p>
     </div>
 </div>
