--- a/Bryllup/Pages/Info.cshtml
+++ b/Bryllup/Pages/Info.cshtml
@@ -14,7 +14,7 @@
     <div class="col-lg-offset-4 col-md-4">
 
         <p>
-            Bryllupet nærmer seg og vi gleder oss stort! Det nye, store på denne siden er at man nå har fått flere begivenheter å velge i! Se bare her:
+            Bryllupet nærmer seg og vi gleder oss stort! Om du scroller nedover, finner du informasjon om selve bryllupet; tid, sted osv. Det nye, store på denne siden er at man nå flår flere begivenheter å velge i! Se bare her:
         </p>
         <p>
             &nbsp;
@@ -25,13 +25,14 @@
 
         </h2>
         <p>
-            Vi ønsker å holde et lite «vorspiel» før den store dagen, og håper at alle (ihvertfall så mange som mulig) vil komme på takterasse-baren EIGHT (tidl. Etoile) på Grand Hotell, dagen før dagen (altså fredag 6. juli, for å snakke i klartekst). Vi vil være der fra kl. 19, og kan friste med lett snacks og en og annen forfriskning til de som vil komme. Dette er dagen for å varme opp sine sosiale ferdigheter, og mingle med familie, venner og fjerne slektninger. M.a.o. ingenting man bør gå glipp av!
+            Vi ønsker å holde et lite «vorspiel» før den store dagen, og håper at alle (ihvertfall så mange som mulig) vil komme på takterasse-baren EIGHT (tidl. Etoile) på Grand Hotell, dagen før dagen (altså fredag 6. juli, for å snakke i klartekst).
+            Vi vil være der fra kl. 19, og oppfordrer også dere til å komme omtrent på den tiden, da utestedet holder av et område for oss, men ikke dersom det ikke er noen der.
+            Vi kan friste med lett snacks og en og annen forfriskning til de som vil komme. Dette er dagen for å varme opp sine sosiale ferdigheter, og mingle med familie, venner og fjerne slektninger. M.a.o. ingenting man bør gå glipp av!
         </p>
         <p>
-            Vi kjører, som dere skjønner, en heldigital løsning her, og ønsker at dere vil huke av om dere kommer eller ikke. Vi gjør det ikke sånn bare for å fremstå som moderne,
-            men fordi utestedet trenger å vite hvordan de skal dimensjonere opplegget. Blir vi mange nok, får vi muligens styre musikkanlegget!
-            Vi anmoder alle om å svare så fort dere har gjort dere opp en mening, men setter ingen strammere frist enn «rimelighetens grenser».
-            Gå til registreringssiden for å huke av <strong><a href="/Attendees">HER</a></strong>.
+            Vi kjører, som dere skjønner, en heldigital løsning her, og ønsker at dere vil huke av om dere kommer eller ikke. Vi gjør det ikke sånn bare for å fremstå som moderne, men fordi utestedet trenger å vite hvordan de skal dimensjonere opplegget.
+            Blir vi mange nok, får vi muligens styre musikkanlegget! Vi anmoder alle om å svare så fort dere har gjort dere opp en mening, men setter ingen strammere frist enn «rimelighetens grenser».
+            Gå til registreringssiden  <strong><a href="/Attendees">HER</a></strong>.
         </p>
         <p>
             &nbsp;
@@ -40,15 +41,33 @@
             Søndagsbrunsj på Bølgen & Moi Briskeby
         </h2>
         <p>
+
             Dagen derpå håper vi at mange (evt. alle) vil komme på Bølgen & Moi på Briskeby kl 14. Dette er jo stedet som er kjent for å ha byens beste søndagsbrunsj.
-            Når man i tillegg kan oppsummere gårsdagen med de beste folkene fra da, bør dette være en no-brainer.
-            Her kan man dele vennskapelig sladder, diskutere kjoler eller bare sitte stille og spise. Barn er dessuten veldig velkomne,
+            Når man i tillegg kan oppsummere gårsdagen med de beste folkene fra da, bør dette være en no-brainer. Her kan man dele vennskapelig sladder, diskutere kjoler eller bare sitte stille og spise. Barn er dessuten veldig velkomne,
             og det blir en egen avdeling for de. Det blir et godt tilbud på en pris. pr. snute. Dette kommer vi tilbake til straks.
+
         </p>
 
         <p>
             Gå til registreringssiden for å huke av <strong><a href="/Attendees">HER</a></strong>.
         </p>
+        <p>
+            &nbsp;
+        </p>
+        <h2>
+            Gaveønsker
+        </h2>
+        <p>
+            Etter ti års samboerskap, er det på tide å komme seg opp et hakk på porselens-fronten.
+        </p>
+        <p>
+            I forretningen Backe Grensen har vi opprettet en ønskeliste. Der kan man bestille på nett, og de leverer direkte til gavebordet! Det er mye å velge i, 
+            men listen er ikke satt opp i prioritert rekkefølge fra butikkens side. Der er det en salig blanding av stentøy i alle former og fasonger. Men tallerkenene er nok det vi ønsker oss først.
+        </p>
+        <p>
+            Link til ønskelisten er her: https://www.backeigrensen.no/onskelister/se-en-liste/?wlid=23917
+        </p>
+      
         <p>
             &nbsp;
         </p>
