La til gammel tekst på gaveønsker

--- a/Bryllup/Pages/Info.cshtml
+++ b/Bryllup/Pages/Info.cshtml
@@ -65,9 +65,22 @@
             men listen er ikke satt opp i prioritert rekkefølge fra butikkens side. Der er det en salig blanding av stentøy i alle former og fasonger. Men tallerkenene er nok det vi ønsker oss først.
         </p>
         <p>
-            Link til ønskelisten er her: https://www.backeigrensen.no/onskelister/se-en-liste/?wlid=23917
+            Link til ønskelisten er her: <a href="https://www.backeigrensen.no/onskelister/se-en-liste/?wlid=23917">https://www.backeigrensen.no/onskelister/se-en-liste/?wlid=23917</a>
         </p>
       
+        <p>
+            På grunn av brudeparets travle hverdagsliv, ligger vi litt bakpå her. Men se innom om en ukes tid, så tenker vi at dette er mer utfyllende. Det kommer til å bli noe av porselen, men vi har ikke bestemt oss helt for hva ennå.
+        </p>
+        <p>
+            For de som ikke syns porselen er så kult, blir vi også glade for andre ting som dere tenker er midt i blinken. Vi ønsker oss bl.a. opplevelser som f.eks. restaurantbesøk, reiser eller andre ting. Men her gjelds det å kjenne sine pappenheimere. Fallskjermhopp, isklatring og ølbryggingskurs er eksempler på ting som vi ikke syns er SÅ gøy.
+
+        </p>
+        <p>
+            Hvor kjedelig det enn kan virke, blir vi også veldig glade for bidrag til reising, kunst og interiør generelt. Pengegaver er altså helt innafor i vår bok. Vi har derfor opprettet en gavekonto for dette. Da vil man jo også ha anledning til å øremerke bidragene i nettbankenes kommentarfelt.
+        </p>
+        <p>
+            Dette kontonummeret er: 1214 17 55 100
+        </p>
         <p>
             &nbsp;
         </p>
